--- a/frmTrackThread/frmTrackThread.csproj
+++ b/frmTrackThread/frmTrackThread.csproj
@@ -84,5 +84,8 @@
   <ItemGroup>
     <None Include="Resources\1234.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\12.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
